--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     align-items: center;
     width: 100%;
     margin-bottom: 40px;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /* Permitir quebra de linha em telas menores */
 }
 
 .timeline-left, .timeline-right {
@@ -88,7 +88,7 @@ iframe {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
+    padding: 0 20px;
 }
 
 .logo {
@@ -138,13 +138,14 @@ iframe {
     }
 
     .navbar {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px;
     }
 
     .hamburger-menu {
         display: block;
+        margin-left: auto;
     }
 
     .navbar ul {
